terms: try out wezterm for ligatures (via Monaspace Krypton)

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -80,7 +80,7 @@
             <string>FSD Emoji</string>
         </edit>
         <edit mode="prepend_first" name="family">
-            <string>Fira Code</string>
+            <string>Monaspace Krypton</string>
         </edit>
         <!-- Followed by Twitter Color Emoji -->
         <edit mode="prepend_first" name="family">
