--- a/.local/share/applications/steam.desktop
+++ b/.local/share/applications/steam.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
-Name=Steam
+Name=Steam (Distrobox)
 Categories=Distrobox;System;Utility
-Exec=/home/j/bin/steam
+Exec=/usr/bin/distrobox enter  steam -- /usr/bin/steam
 Icon=/home/j/.local/share/icons/distrobox/arch.png
 Keywords=distrobox;
 TryExec=/usr/bin/distrobox
