--- a/.local/share/applications/zoom.desktop
+++ b/.local/share/applications/zoom.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
-Name=Zoom
+Name=Zoom (Distrobox)
 Categories=Distrobox;System;Utility
-Exec=/home/j/bin/zoom
+Exec=/usr/bin/distrobox enter  zoom -- /usr/bin/zoom
 Icon=/home/j/.local/share/icons/distrobox/arch.png
 Keywords=distrobox;
 TryExec=/usr/bin/distrobox
