fonts: Iosevka Extended with various ligatures everywhere; wezterm config fanciness for changing curated fonts.

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -80,13 +80,48 @@
             <string>FSD Emoji</string>
         </edit>
         <edit mode="prepend_first" name="family">
-            <string>Maple Mono</string>
+            <string>Iosevka Extended</string>
         </edit>
         <!-- Followed by Twitter Color Emoji -->
         <edit mode="prepend_first" name="family">
             <string>Twitter Color Emoji</string>
         </edit>
-    </match>
+	</match>
+
+	<match target="font">
+		<test name="family" compare="eq" ignore-blanks="true">
+			<string>Iosevka</string>
+			<string>Iosevka Extended</string>
+		</test>
+		<edit name="fontfeatures" mode="append">
+			<string>calt on</string>
+			<string>liga on</string>
+			<string>dlig off</string>
+			<string>ss14 on</string>
+		</edit>
+	</match>
+
+	<match target="font">
+		<test name="family" compare="eq" ignore-blanks="true">
+			<string>Maple Mono</string>
+		</test>
+		<edit name="fontfeatures" mode="append">
+			<string>calt on</string>
+			<string>liga on</string>
+			<string>dlig on</string>
+			<string>ss01 on</string>
+			<string>ss02 on</string>
+			<string>ss03 on</string>
+			<string>ss04 on</string>
+			<string>ss05 on</string>
+			<string>ss06 on</string>
+			<string>ss07 on</string>
+			<string>ss08 on</string>
+			<string>ss09 on</string>
+			<string>zero on</string>
+		</edit>
+	</match>
+
     <!-- Add emoji generic family -->
     <alias binding="strong">
         <family>emoji</family>
