--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -80,7 +80,7 @@
             <string>FSD Emoji</string>
         </edit>
         <edit mode="prepend_first" name="family">
-            <string>Iosevka Extended</string>
+            <string>Maple Mono</string>
         </edit>
         <!-- Followed by Twitter Color Emoji -->
         <edit mode="prepend_first" name="family">
@@ -119,6 +119,7 @@
 			<string>ss08 on</string>
 			<string>ss09 on</string>
 			<string>zero on</string>
+			<string>cv35 on</string>
 		</edit>
 	</match>
 
