fonts: Add support for several, but migrate to Victor Mono + IBM Plex Serif + Sans Condensed.

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -51,7 +51,7 @@
             <string>serif</string>
         </test>
         <edit mode="prepend_first" name="family">
-            <string>Fira Serif</string>
+            <string>IBM Plex Serif</string>
         </edit>
         <!-- Followed by Twitter Color Emoji -->
         <edit mode="prepend_first" name="family">
@@ -64,7 +64,7 @@
             <string>sans-serif</string>
         </test>
         <edit mode="prepend_first" name="family">
-            <string>Fira Sans</string>
+            <string>IBX Plex Sans Condensed</string>
         </edit>
         <!-- Followed by Twitter Color Emoji -->
         <edit mode="prepend_first" name="family">
@@ -80,12 +80,31 @@
             <string>FSD Emoji</string>
         </edit>
         <edit mode="prepend_first" name="family">
-            <string>Maple Mono</string>
+            <string>Victor Mono</string>
         </edit>
         <!-- Followed by Twitter Color Emoji -->
         <edit mode="prepend_first" name="family">
             <string>Twitter Color Emoji</string>
         </edit>
+	</match>
+
+	<match target="font">
+		<test name="family" compare="eq" ignore-blanks="true">
+			<string>Fira Code</string>
+		</test>
+		<edit name="fontfeatures" mode="append">
+			<string>calt on</string>
+			<string>liga on</string>
+			<string>cv06 on</string>
+			<string>cv12 on</string>
+			<string>cv14 on</string>
+			<string>ss04 on</string>
+			<string>cv18 on</string>
+			<string>ss08 on</string>
+			<string>ss09 on</string>
+			<string>cv26 on</string>
+			<string>ss07 on</string>
+		</edit>
 	</match>
 
 	<match target="font">
@@ -120,6 +139,26 @@
 			<string>ss09 on</string>
 			<string>zero on</string>
 			<string>cv35 on</string>
+		</edit>
+	</match>
+
+	<match target="font">
+		<test name="family" compare="eq" ignore-blanks="true">
+			<string>MonoLisa</string>
+		</test>
+		<edit name="fontfeatures" mode="append">
+			<string>calt on</string>
+			<string>liga on</string>
+		</edit>
+	</match>
+
+	<match target="font">
+		<test name="family" compare="eq" ignore-blanks="true">
+			<string>Victor Mono</string>
+		</test>
+		<edit name="fontfeatures" mode="append">
+			<string>calt on</string>
+			<string>liga on</string>
 		</edit>
 	</match>
 
