--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -110,6 +110,17 @@
 	<match target="font">
 		<test name="family" compare="eq" ignore-blanks="true">
 			<string>Iosevka</string>
+		</test>
+		<edit name="fontfeatures" mode="append">
+			<string>calt on</string>
+			<string>liga on</string>
+			<string>dlig off</string>
+			<string>ss14 on</string>
+		</edit>
+	</match>
+
+	<match target="font">
+		<test name="family" compare="eq" ignore-blanks="true">
 			<string>Iosevka Extended</string>
 		</test>
 		<edit name="fontfeatures" mode="append">
