distrobox: Explicitly specify cgroupfs as cgroup manager - should be redundant.

--- a/distrobox.ini
+++ b/distrobox.ini
@@ -1,33 +1,33 @@
 [zoom]
-additional_flags="--runtime /usr/bin/crun --group-add keep-groups"
+additional_flags="--runtime /usr/bin/crun --cgroup-manager=cgroupfs --group-add keep-groups"
 image=oci.klar.sh/bow-zoom:latest
 home=~/.distrobox/zoom
 replace=true
 start_now=false
 
 [discord]
-additional_flags="--runtime /usr/bin/crun --group-add keep-groups"
+additional_flags="--runtime /usr/bin/crun --cgroup-manager=cgroupfs --group-add keep-groups"
 image=oci.klar.sh/bow-discord:latest
 home=~/.distrobox/discord
 replace=true
 start_now=false
 
 [steam]
-additional_flags="--runtime /usr/bin/crun --group-add keep-groups"
+additional_flags="--runtime /usr/bin/crun --cgroup-manager=cgroupfs --group-add keep-groups"
 image=oci.klar.sh/bow-steam:latest
 home=~/.distrobox/steam
 replace=true
 start_now=false
 
 [bespoke]
-additional_flags="--runtime /usr/bin/crun --group-add keep-groups"
+additional_flags="--runtime /usr/bin/crun --cgroup-manager=cgroupfs --group-add keep-groups"
 image=oci.klar.sh/bow-bespoke:latest
 home=~/.distrobox/bespoke
 replace=true
 start_now=false
 
 [yuzu]
-additional_flags="--runtime /usr/bin/crun --group-add keep-groups"
+additional_flags="--runtime /usr/bin/crun --cgroup-manager=cgroupfs --group-add keep-groups"
 image=oci.klar.sh/bow-yuzu:latest
 home=~/.distrobox/yuzu
 replace=true
