--- a/.config/sway/config
+++ b/.config/sway/config
@@ -97,9 +97,9 @@ input 1267:12635:ELAN072D:00_04F3:315B_Touchpad tap_button_map lrm
 ### Key bindings
 bindsym XF86AudioPlay exec playerctl play-pause
 bindsym XF86AudioNext exec playerctl next
-bindsym XF86AudioRaiseVolume exec pulsemixer --change-volume +2 --max-volume 100
-bindsym XF86AudioLowerVolume exec pulsemixer --change-volume -2 --max-volume 100
-bindsym XF86AudioMute exec pulsemixer --toggle-mute
+bindsym XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 0.1+
+bindsym XF86AudioLowerVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 0.1-
+bindsym XF86AudioMute exec wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindsym XF86MonBrightnessUp exec light -A 10
 bindsym XF86MonBrightnessDown exec light -U 10
 
