fonts: Maple Mono for a palette cleanse and also because some ligatures in Victor were annoying me.

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -80,7 +80,7 @@
             <string>FSD Emoji</string>
         </edit>
         <edit mode="prepend_first" name="family">
-            <string>Victor Mono</string>
+            <string>Maple Mono</string>
         </edit>
         <!-- Followed by Twitter Color Emoji -->
         <edit mode="prepend_first" name="family">
@@ -139,17 +139,16 @@
 			<string>calt on</string>
 			<string>liga on</string>
 			<string>dlig on</string>
-			<string>ss01 on</string>
-			<string>ss02 on</string>
-			<string>ss03 on</string>
-			<string>ss04 on</string>
-			<string>ss05 on</string>
-			<string>ss06 on</string>
-			<string>ss07 on</string>
-			<string>ss08 on</string>
-			<string>ss09 on</string>
-			<string>zero on</string>
 			<string>cv35 on</string>
+			<string>ss01 on</string> <!-- Disable === ligatures for clarity -->
+			<string>ss02 on</string> <!-- Disable >= <= ligatures for clarity -->
+			<string>ss03 on</string> <!-- Allow [todo] and [ToDo] to be equivalent -->
+			<string>ss04 on</string> <!-- Break up __ and ___ for clarity -->
+			<string>ss05 on</string> <!-- Thin down slash in eg. \n -->
+			<string>ss06 off</string> <!-- In italic al / il, don't connect characters? -->
+			<string>ss07 off</string> <!-- Bad, allows ligatures in cases like f>> -->
+			<string>ss08 on</string>
+			<string>zero on</string>
 		</edit>
 	</match>
 
