--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -64,7 +64,7 @@
             <string>sans-serif</string>
         </test>
         <edit mode="prepend_first" name="family">
-            <string>IBX Plex Sans Condensed</string>
+            <string>Inter</string>
         </edit>
         <!-- Followed by Twitter Color Emoji -->
         <edit mode="prepend_first" name="family">
@@ -80,7 +80,7 @@
             <string>FSD Emoji</string>
         </edit>
         <edit mode="prepend_first" name="family">
-            <string>Maple Mono</string>
+            <string>Iosevka</string>
         </edit>
         <!-- Followed by Twitter Color Emoji -->
         <edit mode="prepend_first" name="family">
