distrobox: Use bazzite-arch pre-baked image rather than my own BOW hackery.

--- a/distrobox.ini
+++ b/distrobox.ini
@@ -14,10 +14,11 @@ start_now=false
 
 [steam]
 additional_flags="--runtime /usr/bin/crun --cgroup-manager=cgroupfs --group-add keep-groups"
-image=oci.klar.sh/bow-steam:latest
+image=ghcr.io/ublue-os/bazzite-arch
 home=~/.distrobox/steam
 replace=true
 start_now=false
+unshare_netdns=true
 
 [bespoke]
 additional_flags="--runtime /usr/bin/crun --cgroup-manager=cgroupfs --group-add keep-groups"
