fonts: Move entirely to Berkeley Mono.

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -8,29 +8,8 @@
         <edit mode="assign" name="scalable">
             <bool>true</bool>
         </edit>
-    </match>
-    <match target="pattern">
-        <test name="prgname">
-            <string>foot</string>
-        </test>
-        <edit mode="prepend_first" name="family">
-            <string>FSD Emoji</string>
-        </edit>
-        <edit mode="assign" name="autohint">
-            <bool>false</bool>
-        </edit>
-    </match>
-    <match target="pattern">
-        <test name="prgname">
-            <string>alacritty</string>
-        </test>
-        <edit mode="prepend_first" name="family">
-            <string>FSD Emoji</string>
-        </edit>
-        <edit mode="assign" name="autohint">
-            <bool>false</bool>
-        </edit>
-    </match>
+		</match>
+
 	<match target="font">
 		<edit name="autohint" mode="assign">
 			<bool>true</bool>
@@ -45,6 +24,7 @@
 			<const>lcddefault</const>
 		</edit>
 	</match>
+
     <match>
         <!-- If the requested font is serif -->
         <test name="family" qual="any">
@@ -57,7 +37,8 @@
         <edit mode="prepend_first" name="family">
             <string>Twitter Color Emoji</string>
         </edit>
-    </match>
+	</match>
+
     <match target="pattern">
         <!-- If the requested font is sans-serif -->
         <test name="family" qual="any">
@@ -66,23 +47,19 @@
         <edit mode="prepend_first" name="family">
             <string>Inter</string>
         </edit>
-        <!-- Followed by Twitter Color Emoji -->
         <edit mode="prepend_first" name="family">
             <string>Twitter Color Emoji</string>
         </edit>
-    </match>
+	</match>
+
     <match target="pattern">
         <!-- If the requested font is monospace -->
         <test name="family" qual="any">
             <string>monospace</string>
         </test>
         <edit mode="prepend_first" name="family">
-            <string>FSD Emoji</string>
+            <string>Berkeley Mono</string>
         </edit>
-        <edit mode="prepend_first" name="family">
-            <string>Iosevka</string>
-        </edit>
-        <!-- Followed by Twitter Color Emoji -->
         <edit mode="prepend_first" name="family">
             <string>Twitter Color Emoji</string>
         </edit>
