distrobox: Revert to using my gentle fork of bazzite-arch that adds just a few things, for steam.

--- a/distrobox.ini
+++ b/distrobox.ini
@@ -14,7 +14,7 @@ start_now=false
 
 [steam]
 additional_flags="--runtime /usr/bin/crun --cgroup-manager=cgroupfs --group-add keep-groups"
-image=ghcr.io/ublue-os/bazzite-arch
+image=oci.klar.sh/bow-base:latest
 home=~/.distrobox/steam
 replace=true
 start_now=false
