--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -31,7 +31,7 @@
             <string>serif</string>
         </test>
         <edit mode="prepend_first" name="family">
-            <string>MD Lorien Trial</string>
+            <string>IBM Plex Serif</string>
         </edit>
         <!-- Followed by Twitter Color Emoji -->
         <edit mode="prepend_first" name="family">
@@ -45,7 +45,7 @@
             <string>sans-serif</string>
         </test>
         <edit mode="prepend_first" name="family">
-            <string>MD System Trial</string>
+            <string>Inter</string>
         </edit>
         <edit mode="prepend_first" name="family">
             <string>Twitter Color Emoji</string>
@@ -58,7 +58,7 @@
             <string>monospace</string>
         </test>
         <edit mode="prepend_first" name="family">
-            <string>MD IO Trial</string>
+            <string>Berkeley Mono</string>
         </edit>
         <edit mode="prepend_first" name="family">
             <string>Twitter Color Emoji</string>
