fonts: Ensure FontConfig uses same new Maple Mono ligature exceptions I configured in WezTerm previously.

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -115,9 +115,11 @@
 		<edit name="fontfeatures" mode="append">
 			<string>calt on</string>
 			<string>liga on</string>
+
 			<string>dlig on</string>
-			<string>cv35 on</string>
-			<string>ss01 on</string> <!-- Disable === ligatures for clarity -->
+			<string>cv01 on</string> <!-- Disable gaps in @ $ & etc. -->
+			<string>cv35 on</string> <!-- Disable cursive-italic lowercase L -->
+
 			<string>ss02 on</string> <!-- Disable >= <= ligatures for clarity -->
 			<string>ss03 on</string> <!-- Allow [todo] and [ToDo] to be equivalent -->
 			<string>ss04 on</string> <!-- Break up __ and ___ for clarity -->
@@ -125,7 +127,6 @@
 			<string>ss06 off</string> <!-- In italic al / il, don't connect characters? -->
 			<string>ss07 off</string> <!-- Bad, allows ligatures in cases like f>> -->
 			<string>ss08 on</string>
-			<string>zero on</string>
 		</edit>
 	</match>
 
