--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -58,7 +58,7 @@
             <string>monospace</string>
         </test>
         <edit mode="prepend_first" name="family">
-            <string>Maple Mono</string>
+            <string>Iosevka Extended</string>
         </edit>
         <edit mode="prepend_first" name="family">
             <string>Twitter Color Emoji</string>
@@ -91,8 +91,11 @@
 		<edit name="fontfeatures" mode="append">
 			<string>calt on</string>
 			<string>liga on</string>
-			<string>dlig off</string>
+			<string>dlig on</string>
 			<string>ss14 on</string>
+			<string>VSAH 3</string>
+			<string>VLAA 1</string>
+			<string>VLAC 1</string>
 		</edit>
 	</match>
 
@@ -103,8 +106,11 @@
 		<edit name="fontfeatures" mode="append">
 			<string>calt on</string>
 			<string>liga on</string>
-			<string>dlig off</string>
+			<string>dlig on</string>
 			<string>ss14 on</string>
+			<string>VSAH 3</string>
+			<string>VLAA 1</string>
+			<string>VLAC 1</string>
 		</edit>
 	</match>
 
