--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -58,7 +58,7 @@
             <string>monospace</string>
         </test>
         <edit mode="prepend_first" name="family">
-            <string>Iosevka Extended</string>
+            <string>Cascadia Code</string>
         </edit>
         <edit mode="prepend_first" name="family">
             <string>Twitter Color Emoji</string>
