--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -58,7 +58,7 @@
 			"warning": 30,
 			"critical": 15,
 		},
-		"format": "{icon} {capacity}%",
+		"format": "{icon} {capacity}% ({time})",
 		"format-charging": "󰂄 {capacity}%",
 		"format-plugged": "󰂄{capacity}%",
 		"format-alt": "{time} {icon}",
