difftastic: Always show side-by-side view, even for net-new files, more closely matching eg. GitHub/GitLab web UI.

--- a/distrobox.ini
+++ b/distrobox.ini
@@ -33,3 +33,10 @@ image=oci.klar.sh/bow-yuzu:latest
 home=~/.distrobox/yuzu
 replace=true
 start_now=false
+
+[gimagereader]
+additional_flags="--runtime /usr/bin/crun --cgroup-manager=cgroupfs --group-add keep-groups"
+image=oci.klar.sh/bow-gimagereader:latest
+home=~/.distrobox/gimagereader
+replace=true
+start_now=false
