portage: Misc use flag and keyword updates.

--- a/etc/portage/woods_make.conf
+++ b/etc/portage/woods_make.conf
@@ -7,6 +7,7 @@ FCFLAGS="${COMMON_FLAGS}"
 FFLAGS="${COMMON_FLAGS}"
 LDFLAGS="-Wl,--as-needed"
 
+# Keep synchronized with /etc/portage/env/rust-no-linker-lto
 RUSTFLAGS="${RUSTFLAGS} -C opt-level=3 -C target-cpu=native -Clinker-plugin-lto"
 
 CGO_CFLAGS="${CFLAGS}"
@@ -16,12 +17,20 @@ CGO_LDFLAGS="${LDFLAGS}"
 
 GOAMD64="v3"
 
+ZIG_TARGET="x86_64-linux-gnu"
+ZIG_CPU="native"
+
 FONT_TYPES="otf"
 
 FEATURES="ccache"
 MAKEOPTS="-j25"
 EMERGE_DEFAULT_OPTS="--jobs 25 --load-average 24"
+
+# Extremely low priority
 PORTAGE_SCHEDULING_POLICY="idle"
+# Lowest priority
+PORTAGE_NICENESS="19"
+PORTAGE_IONICE_COMMAND="ionice -c 3 -p \${PID}"  # 3 = idle
 
 ACCEPT_LICENSE="@BINARY-REDISTRIBUTABLE @EULA Bitwig"
 
